Update auf neue Version