@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '3.4.1'
+	id 'org.springframework.boot' version '3.5.4'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'java'
 	id 'war'
@@ -8,7 +8,6 @@ plugins {
 }
 
 group = 'de.htwg'
-//sourceCompatibility = '21'
 
 java {
 	toolchain {
@@ -28,8 +27,8 @@ repositories {
 }
 
 dependencies {
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'org.springframework.session:spring-session-core'
@@ -42,6 +41,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.0'
+	
 }
 
 
@@ -59,6 +59,6 @@ jacocoTestReport {
 }
 
 tasks.named('test') {
-	jvmArgs = ["-XX:+EnableDynamicAgentLoading"]
 	useJUnitPlatform()
+	jvmArgs "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }.absolutePath}"
 }
